# OpenClip

./: .gitignore  CODEBASE_STRUCTURE.md  PARITY_PLAN.md  README.md  game_manager.pyw  game_watcher.pyw  recordings_viewer.pyw
.github/workflows/: ci.yml
DEPRECATED/: Game Manager.bat  debug_process_checker.py  game_manager.pyw  games_config.json  manager_settings.json  obs_game_recorder.lua  obs_game_recorder.py  start_watcher.bat  stop_watcher.bat
DEPRECATED/frontend/: index.html  vite.config.js
DEPRECATED/frontend/src/: App.jsx
DEPRECATED/frontend/src/components/: ClipControls.jsx  Navbar.jsx  Sidebar.jsx
DEPRECATED/frontend/src/pages/: ClipsPage.jsx  RecordingsPage.jsx  StoragePage.jsx
DEPRECATED/runtime/: .gitkeep  clip_markers.json
DEPRECATED/static/: index.html
DEPRECATED/static/assets/: index-B75Bu0pe.css  index-B8O0GMoB.js
DEPRECATED/templates/: viewer.html
docker/: Dockerfile.obs  docker-compose.yml
docker/obs-config/: global.ini
docker/scripts/: start-obs.sh
electron-app/: OPTIMIZATION_PLAN.md  README.md  index.html  package-lock.json  package.json  playwright.config.js  playwright.integration.config.js  tailwind.config.js  vite.config.js  vite.ffmpeg.config.js  vite.integration.config.js
electron-app/__mocks__/: electron.js
electron-app/electron/: README.md  apiServer-testing.js  apiServer.js  autoUpdater.js  constants.js  elevatedHelper.js  elevatedRunner.js  fileManager.js  gameWatcher-testing.js  gameWatcher.js  iniParser.js  ipcHandlers-testing.js  ipcHandlers.js  main.js  markerService.js  obsEncoding.js  obsIntegration-testing.js  obsIntegration.js  obsPlugin-testing.js  obsPlugin.js  obsWebSocket.js  obsWsAudio.js  preload.js  processDetector-testing.js  processDetector.js  qrCodeReader.js  recordingService.js  runElevated.js  store-testing.js  store.js  videoMetadata.js
electron-app/resources/: obs_game_recorder.lua
electron-app/resources/defaults/: manager_settings.json
electron-app/scripts/: release.js
electron-app/src/: App.css  App.jsx  README.md  api.js  index.css  mockData.js
electron-app/src/components/: ConfirmDeleteDialog.jsx  OnboardingModal.jsx  OnboardingSteps.jsx
electron-app/src/hooks/: README.md  useAddGameModalState.js  useAudioSourcesState.js  useGameWatcherState.js  useToastState.js  useTrackState.js
electron-app/src/pages/: EncodingPage.jsx  GamesPage.jsx  README.md  SettingsPage.jsx
electron-app/src/pages/games/: AddGameModal.jsx  AudioSourceDropdown.jsx  EditGameModal.jsx  README.md  SceneAudioSourcesCard.jsx  WatcherStatusCard.jsx  WindowPicker.jsx  audioSourceUtils.jsx
electron-app/src/viewer/: README.md  apiBase.js  utils.js  viewer.css
electron-app/src/viewer/components/: AudioWaveformTrack.jsx  ClipControls.jsx  Modal.jsx  README.md  ReencodeModal.jsx  Sidebar.jsx  StorageTreemap.jsx  Timeline.jsx  VideoPlayer.jsx  ZoomTimeline.jsx
electron-app/src/viewer/pages/: ClipsPage.jsx  README.md  RecordingsPage.jsx  StoragePage.jsx
electron-app/src/viewer/utils/: README.md  storageColors.js  treemapUtils.js
electron-app/tests/: README.md  TEST_COVERAGE_ANALYSIS.md  setup.js
electron-app/tests/api/: clips.test.js  ffmpegCheck.test.js  markers.test.js  recordings.test.js  reencode.test.js  storage.test.js  video.test.js
electron-app/tests/components/: AudioSourceDropdown.test.jsx  ClipsPage.test.jsx  ConfirmDeleteDialog.test.jsx  Modal.test.jsx  RecordingsPage.test.jsx  ReencodeModal.test.jsx  Sidebar.test.jsx  VideoPlayer.test.jsx  WatcherStatusCard.test.jsx  WindowPicker.test.jsx
electron-app/tests/e2e/: README.md  games.spec.js  interactions.spec.js  navigation.spec.js  pages.spec.js  session-progress.spec.js  settings.spec.js  xss.spec.js
electron-app/tests/e2e/fixtures/: routes.js  testData.js
electron-app/tests/e2e/integration/: filesystem.spec.js  global-setup.js  obs-scenes.spec.js
electron-app/tests/fixtures/: data.js
electron-app/tests/fixtures/clips/: Halo Clip 2025-01-15 #1.mp4.tracks.json
electron-app/tests/helpers/: mockStore.js  msw.js
electron-app/tests/integration/ffmpeg/: api.ffmpeg.test.js  fileManager.ffmpeg.test.js  setup.js
electron-app/tests/integration/obs/: mockObsServer.js  obsHelper.js  obsHelper.mjs  obsOrchestration.test.js
electron-app/tests/mocks/: electron.js
electron-app/tests/unit/: autoUpdater.test.js  bundleDependencies.test.js  fileManager.test.js  gameWatcher.test.js  iniParser.test.js  ipc.test.js  mainIpcEndpoints.test.js  obsIntegration.test.js  obsPlugin.test.js  obsWebSocket.test.js  preloadBridge.test.js  recordingService.test.js  release.test.js  resilience.test.js  runElevated.test.js  utils.test.js
frontend/src/: App.css
frontend/src/components/: VideoPlayer.jsx  ZoomTimeline.jsx
obs-plugin/: CMakeLists.txt  PluginInstall.md  README.md  obs-frontend-api.def  obs.def
obs-plugin/include/: README.md  obs-frontend-api.h  obs-module.h  obs.h
obs-plugin/src/: README.md  api-handlers.c  api-handlers.h  api-utils.c  api-utils.h  audio-handlers.c  audio-handlers.h  http-server.c  http-server.h  plugin-main.c  recording-handlers.c  recording-handlers.h  scene-handlers.c  scene-handlers.h  source-handlers.c  source-handlers.h  video-handlers.c  video-handlers.h
(+3 files in other folders)
